# solana-polls-votee

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
anchor/programs/solana-polls/src/: lib.rs
programs/solana-polls/: Cargo.toml
programs/solana-polls/src/: lib.rs
src/app/admin/: page.tsx
src/app/admin/components/: CreateEventForm.tsx  EventList.tsx
src/app/admin/events/[eventId]/: page.tsx
src/app/components/: EventForm.tsx  SessionForm.tsx
src/app/student/: page.tsx
src/config/: idl.ts  program.ts  provider.ts
src/types/: idl.ts
